tests/org.eclipse.php.core.tests/workspace/errors/php53/duplicateMethodDeclaration2.pdtt
--TEST--
Test duplicated method
--FILE--
<?php
class Foo {
	public function bar() {}
	public function bAr() {}
}
?>
--EXPECT--
[line=4, start=61, end=64] Cannot declare method bAr because the name is already in use